--- a/styles/Chessboard.module.css
+++ b/styles/Chessboard.module.css
@@ -2,4 +2,13 @@
     border: 1px solid black;
     aspect-ratio: 1/1;
     height: calc(100vh - 12rem);
+    display: grid;
+    grid-template-columns: repeat(8, 1fr);
+}
+
+.tile{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid grey;
 }
