--- a/styles/Chessboard.module.css
+++ b/styles/Chessboard.module.css
@@ -4,6 +4,7 @@
     height: calc(100vh - 12rem);
     display: grid;
     grid-template-columns: repeat(8, 1fr);
+    grid-template-rows: repeat(8, 1fr);
 }
 
 .tile{
@@ -11,4 +12,5 @@
     align-items: center;
     justify-content: center;
     border: 1px solid grey;
+    position: relative;
 }
