--- a/styles/Chessboard.module.css
+++ b/styles/Chessboard.module.css
@@ -5,6 +5,7 @@
     display: grid;
     grid-template-columns: repeat(8, 1fr);
     grid-template-rows: repeat(8, 1fr);
+    position: relative;
 }
 
 .tile{
@@ -13,4 +14,10 @@
     justify-content: center;
     border: 1px solid grey;
     position: relative;
+}
+
+.logButton{
+    display: block;
+    position:absolute;
+    /* left: -100%; */
 }
